# insightGate

./: .env.example  .gitignore  PRD.md  README.md  audits.db  pyproject.toml
.atl/: skill-registry.md
config/: agents.yaml  tasks.yaml
knowledge/: user_preference.txt
outputs/: 2026-04-17_TSLA_audit.md  2026-04-21_TSLA_audit.md  2026-04-21_tsla_audit.md  audit.md
src/insightgape/: __init__.py  crew.py  main.py
src/insightgape/config/: agents.yaml  tasks.yaml
src/insightgape/tools/: __init__.py  alpha_vantage_tool.py  custom_tool.py
