

[project]
name = "insightgape"
version = "0.1.0"
description = "InsightGape: Black Box Auditor - Financial Intelligence Agent"
authors = [{ name = "InsightGape Team", email = "insights@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.1",
    "rich",
    "python-dotenv",
    "alpha-vantage",
    "pytest",
    "weasyprint",
    "requests",
    "beautifulsoup4",
    "pandas>=2.3.3",
    "openpyxl>=3.1.5",
]

[tool.crewai]
type = "crew"
crew = "insightgape.crew:InsightGapeCrew.audit_crew"

[project.scripts]
insightgape = "insightgape.main:run"
run_crew = "insightgape.main:run"
train = "insightgape.main:train"
replay = "insightgape.main:replay"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
